...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MTo-nN-55r" customClass="AutoCompletionTextField">
                                <rect key="frame" x="34" y="70" width="218" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="coreDataTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="6Pz-9L-cKv"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
...
                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QCh-vJ-fGf" customClass="AutoCompletionTextField">
                                <rect key="frame" x="275" y="70" width="218" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="textFieldJSON"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="UgX-m4-Vbh"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
...
